@@ -1,10 +1,9 @@
-// Copyright 2000-2023 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package org.jetbrains.jps.incremental;
 
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.jps.builders.BuildTargetType;
 
-import java.util.Collections;
 import java.util.List;
 
 /**
@@ -18,20 +17,20 @@ public abstract class BuilderService {
    * of regular Java modules, you don't need to return anything here.
    */
   public @NotNull List<? extends BuildTargetType<?>> getTargetTypes() {
-    return Collections.emptyList();
+    return List.of();
   }
 
   /**
    * Returns the list of Java module builder extensions contributed by this plugin.
    */
   public @NotNull List<? extends ModuleLevelBuilder> createModuleLevelBuilders() {
-    return Collections.emptyList();
+    return List.of();
   }
 
   /**
    * Returns the list of non-module target builders contributed by this plugin.
    */
   public @NotNull List<? extends TargetBuilder<?,?>> createBuilders() {
-    return Collections.emptyList();
+    return List.of();
   }
 }
