@@ -1,4 +1,4 @@
-// Copyright 2000-2024 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package org.jetbrains.jps.gradle.model.impl;
 
 import com.dynatrace.hash4j.hashing.HashSink;
@@ -65,7 +65,7 @@ public final class GradleResourcesTarget extends ModuleBasedTarget<GradleResourc
     if (moduleConfig != null) {
       return isTests() ? moduleConfig.testResources : moduleConfig.resources;
     }
-    return Collections.emptyList();
+    return List.of();
   }
 
   public GradleModuleResourceConfiguration getModuleResourcesConfiguration(BuildDataPaths dataPaths) {
@@ -132,7 +132,7 @@ public final class GradleResourcesTarget extends ModuleBasedTarget<GradleResourc
 
   @Override
   public void computeConfigurationDigest(@NotNull ProjectDescriptor projectDescriptor, @NotNull HashSink hash) {
-    BuildDataPaths dataPaths = projectDescriptor.getTargetsState().getDataPaths();
+    BuildDataPaths dataPaths = projectDescriptor.dataManager.getDataPaths();
     GradleModuleResourceConfiguration configuration = getModuleResourcesConfiguration(dataPaths);
     if (configuration == null) {
       hash.putBoolean(false);
